Mobile: remove redundant 768px CSS block

--- a/index.html
+++ b/index.html
@@ -677,6 +677,14 @@
       .pinMini .msg{ white-space:normal; }
       .modalGrid{ grid-template-columns: 1fr; }
     }
+/* =========================
+   MOBILE UI V2 – STEP 1
+   Fullscreen map on mobile
+========================= */
+
+
+
+
   </style>
 </head>
 
