Fix duplicated mobile event listeners

--- a/index.html
+++ b/index.html
@@ -1548,7 +1548,7 @@ if(marker && !isMobile()) marker.openPopup();
         $("mobileControls").classList.toggle("collapsed");
       });
 
-      $("mSearchInput").addEventListener("input", applyFilters);      $("mSearchInput").addEventListener("input", applyFilters);
+      $("mSearchInput").addEventListener("input", applyFilters);
 
       $("mSearchInput").addEventListener("focus", () => {
         $("mobileControls").classList.remove("collapsed");
@@ -1558,7 +1558,6 @@ if(marker && !isMobile()) marker.openPopup();
         $("mobileControls").classList.remove("collapsed");
       });
 
-      $("mFilterSauna").addEventListener("change", applyFilters);
       $("mFilterSauna").addEventListener("change", applyFilters);
       $("mFilterChanging").addEventListener("change", applyFilters);
       $("mFilterPricing").addEventListener("change", applyFilters);
