Mobile: expand controls and close sheet when search activated

--- a/index.html
+++ b/index.html
@@ -1551,12 +1551,15 @@ if(marker && !isMobile()) marker.openPopup();
       $("mSearchInput").addEventListener("input", applyFilters);
 
       $("mSearchInput").addEventListener("focus", () => {
-        $("mobileControls").classList.remove("collapsed");
-      });
+  // jos detail (bottom sheet) on auki, suljetaan se jotta haku-UI saa tilaa
+  if ($("mobileSheet").classList.contains("open")) closeSheet();
+  $("mobileControls").classList.remove("collapsed");
+});
 
-      $("mSearchInput").addEventListener("click", () => {
-        $("mobileControls").classList.remove("collapsed");
-      });
+$("mSearchInput").addEventListener("click", () => {
+  if ($("mobileSheet").classList.contains("open")) closeSheet();
+  $("mobileControls").classList.remove("collapsed");
+});
 
       $("mFilterSauna").addEventListener("change", applyFilters);
       $("mFilterChanging").addEventListener("change", applyFilters);
