Mobile: start in collapsed state

--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
   </div>
 
   <!-- MOBILE floating controls (same IDs reused; we will “mirror” values via JS) -->
-  <div class="mobileControls" id="mobileControls">
+  <div class="mobileControls collapsed" id="mobileControls">
     <div class="mobileTopRow">
   <div>
     <div class="mobileBrand">❄️ Talviuintipaikat.fi</div>
